# quality_rag

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
rag/: rag.py
src/api/: router.py
src/api/dependencies/: chroma.py  db.py
src/core/common/: base_filters.py  pagination.py
src/core/db/: base.py  chroma.py  engine.py  models.py  session.py
src/core/embeddings/: base.py  gemini_embeddings.py
src/core/llm/: gemini.py
src/endpoints/: chatbot_endpoint.py
src/features/documents/: enums.py  models.py  repository.py  router.py  schemas.py  usecases.py
src/features/documents/schemas/: document_schemas.py  filters.py
src/features/ingestion/: router.py  usecases.py
src/features/ingestion/pipeline/: chunker.py  document_loader.py  ingestion_pipeline.py  text_processor.py
src/features/retrieval/: prompt.py  router.py  uc_interface.py  usecases.py
src/features/retrieval/schemas/: base_prompt.py  chat_schemas.py
src/repositories/: chroma_repo.py  interface.py
src/services/: chat_service.py
src/workers/: celery_app.py  ingestion.py
