[project]
name = "quality-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "chromadb>=1.5.5",
    "docling>=2.80.0",
    "fastapi>=0.129.0",
    "google>=3.0.0",
    "google-genai>=1.63.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.1",
    "python-multipart>=0.0.24",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
